# profile.common.platform.core.uifw.e-tizen-data

./: COPYING  configure.ac
data/units/: enlightenment
default/backgrounds/: Gradation.edj  Makefile.am  Tizen.edj
default/backgrounds/Gradation/: Gradation.edc  build.sh
default/backgrounds/Tizen/: Tizen.edc  build.sh
default/config/: Makefile.am  profile.src
default/config/tizen-common/: Makefile.am  e.src.in  e_comp.src.in  make_keymap_conf.sh  module.devicemgr.src  module.keyrouter.src
default/wayland/: enlightenment
packaging/: e-tizen-data.spec
